# carla_tesla_model3_description

./: CHANGELOG.md  README.md  package.xml  setup.cfg  setup.py
carla_tesla_model3_description/: README.md  package.xml  setup.py
carla_tesla_model3_description/config/: vehicle_info.param.yaml
carla_tesla_model3_launch/: CMakeLists.txt  package.xml
