<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>carla_tesla_model3_launch</name>
  <version>0.1.0</version>
  <description>The carla_tesla_model3_launch package</description>
  <maintainer email="kirill.mitkovskii@gmail.com">Robotics010</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
